# ojcore

./: CMakeLists.txt  OJCore.h  README.md  main.cpp  ojdef.h
OJJson/: OJJsonParse.h
OJRun/: CMakeLists.txt  OJFileCheck.cpp  OJFileCheck.h  OJJudgeProcess.h  OJProcessPool.cpp  OJProcessPool.h  OJProcessPoolPrivate.cpp  OJProcessPoolPrivate.h  OJRun.h  OJServer.cpp  OJServer.h
OJRun/OJJson/: CMakeLists.txt  OJJson.h  OJJsonObject.h
OJRun/OJSql/: OJSqlConnector.cpp  OJSqlResult.h
OJRun/OJTest/: test
OJRun/OJUtils/: OJDebug.cpp  OJDebug.h  OJError.cpp  OJUtils.h
OJSql/: CMakeLists.txt  OJSql.h  OJSqlConnector.h  OJSqlDatabase.cpp  OJSqlDatabase.h  OJSqlResult.cpp
OJTest/: 2  test.cpp
OJUtils/: CMakeLists.txt  OJError.h  OJVariant.cpp  OJVariant.h
